# dat803course

./: README.md  am1.ipynb  am1solve.ipynb  am2solve.ipynb  oblig1.ipynb  pyproject.toml
data/: am2buildingData.csv  am2weatherData.csv
